--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.63MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.64MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
+  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-3.74MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.06MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-17.43MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.77MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-345.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇯🇵 日本-338.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-15.63MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
 rules:
