--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇸🇬 新加坡-3.74MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-598.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-5.05MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.82MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-18.77MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-338.0KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-15.63MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇯🇵 日本-338.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-15.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
