--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-598.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-5.05MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.82MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-4.30MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-5.06MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: 116.129.254.177, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.67MB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-2.20MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇳 中国-1001.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-18.77MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
@@ -66,18 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-598.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.30MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇭🇰 香港-5.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1001.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-18.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
